Correcion de mensajes de error y errores de manejo de nodos